# LearnOpenGL

./: CMakeLists.txt  README.txt
include/: camera.h
include/GLFW/: glfw3.h.gch
include/glad/: glad.h  glad.h.gch
include/shader/: shader.frag  shader.fs  shader.h  shader.vert
src/: glad.c  main.cpp
